// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduceEventsByPlayer DamageEvents sourceID === damageDone by player 1`] = `
Array [
  Object {
    "abilityGameID": 346665,
    "amount": 156575,
    "buffs": "337547.",
    "hitType": 1,
    "mitigated": 106,
    "overheal": undefined,
    "sourceID": 4,
    "sourceMarker": 7,
    "targetID": 13,
    "targetInstance": 1,
    "timestamp": 1773978,
    "type": "damage",
    "unmitigatedAmount": 354,
  },
  Object {
    "abilityGameID": 164812,
    "amount": 45889,
    "buffs": "48518.48517.307185.194223.24858.334131.",
    "hitType": 1,
    "overheal": undefined,
    "sourceID": 8,
    "targetID": 10,
    "targetInstance": 4,
    "timestamp": 1778150,
    "type": "damage",
    "unmitigatedAmount": 575,
  },
  Object {
    "abilityGameID": 188389,
    "amount": 111102,
    "buffs": "307185.334131.",
    "hitType": 1,
    "overheal": undefined,
    "sourceID": 2,
    "targetID": 10,
    "targetInstance": 3,
    "timestamp": 1779085,
    "type": "damage",
    "unmitigatedAmount": 419,
  },
  Object {
    "abilityGameID": 1,
    "amount": 1860,
    "buffs": "307185.24858.334131.",
    "hitType": 1,
    "mitigated": 132,
    "overheal": undefined,
    "sourceID": 24,
    "sourceInstance": 1,
    "targetID": 16,
    "timestamp": 1781633,
    "type": "damage",
    "unmitigatedAmount": 442,
  },
  Object {
    "abilityGameID": 157348,
    "amount": 37570,
    "buffs": "325381.345228.80353.343594.345230.324748.307185.336217.334131.",
    "hitType": 1,
    "overheal": undefined,
    "sourceID": 17,
    "sourceInstance": 1,
    "targetID": 10,
    "targetInstance": 3,
    "timestamp": 1782896,
    "type": "damage",
    "unmitigatedAmount": 1374,
  },
  Object {
    "abilityGameID": 108853,
    "amount": 193176,
    "buffs": "190319.341449.345211.116014.80353.343594.26297.307185.327371.",
    "hitType": 2,
    "overheal": undefined,
    "sourceID": 9,
    "targetID": 15,
    "targetInstance": 1,
    "timestamp": 1784461,
    "type": "damage",
    "unmitigatedAmount": 2410,
  },
]
`;

exports[`reduceEventsByPlayer DamageEvents targetID === damageTaken by player 1`] = `
Array [
  Object {
    "abilityGameID": 1,
    "amount": 461439,
    "hitType": 1,
    "mitigated": 11244,
    "overheal": undefined,
    "sourceID": 10,
    "sourceInstance": 1,
    "targetID": 4,
    "targetMarker": 7,
    "timestamp": 1774843,
    "type": "damage",
    "unmitigatedAmount": 15636,
  },
  Object {
    "abilityGameID": 345211,
    "amount": 20789,
    "buffs": "345211.307185.341449.",
    "hitType": 1,
    "mitigated": 157,
    "overheal": undefined,
    "sourceID": 9,
    "targetID": 9,
    "tick": true,
    "timestamp": 1780293,
    "type": "damage",
    "unmitigatedAmount": 587,
  },
  Object {
    "abilityGameID": 1,
    "amount": 144274,
    "hitType": 1,
    "mitigated": 13199,
    "overheal": undefined,
    "sourceID": 10,
    "sourceInstance": 2,
    "targetID": 24,
    "targetInstance": 2,
    "timestamp": 1781866,
    "type": "damage",
    "unmitigatedAmount": 16164,
  },
  Object {
    "abilityGameID": 321821,
    "amount": 71694,
    "hitType": 1,
    "mitigated": 156,
    "overheal": undefined,
    "sourceID": 13,
    "sourceInstance": 7,
    "targetID": 2,
    "timestamp": 1789874,
    "type": "damage",
    "unmitigatedAmount": 1758,
  },
  Object {
    "abilityGameID": 321821,
    "amount": 33020,
    "hitType": 1,
    "mitigated": 251,
    "overheal": undefined,
    "sourceID": 13,
    "sourceInstance": 7,
    "targetID": 1,
    "targetMarker": 2,
    "timestamp": 1789874,
    "type": "damage",
    "unmitigatedAmount": 1758,
  },
  Object {
    "abilityGameID": 321821,
    "amount": 20916,
    "hitType": 1,
    "mitigated": 170,
    "overheal": undefined,
    "sourceID": 13,
    "sourceInstance": 7,
    "targetID": 8,
    "timestamp": 1789874,
    "type": "damage",
    "unmitigatedAmount": 1758,
  },
  Object {
    "abilityGameID": 1,
    "amount": 889,
    "hitType": 1,
    "mitigated": 2544,
    "overkill": 5051,
    "sourceID": 13,
    "sourceInstance": 8,
    "targetID": 14,
    "targetInstance": 2,
    "timestamp": 1877650,
    "type": "damage",
    "unmitigatedAmount": 8484,
  },
]
`;

exports[`reduceEventsByPlayer HealEvents sourceID === healingDone by source 1`] = `
Array [
  Object {
    "abilityGameID": 344422,
    "amount": 211052,
    "buffs": "216251.333089.307185.52127.335161.",
    "hitType": 1,
    "overheal": 372945,
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 1,
    "targetMarker": 2,
    "timestamp": 1913800,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 228526,
    "buffs": "341449.343594.307185.335161.324748.",
    "hitType": 2,
    "overheal": 458486,
    "sourceID": 9,
    "targetID": 9,
    "timestamp": 1915001,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 241688,
    "buffs": "203981.337547.974.61295.335161.324226.",
    "hitType": 1,
    "overheal": 326568,
    "sourceID": 4,
    "sourceMarker": 7,
    "targetID": 4,
    "targetMarker": 7,
    "timestamp": 1916507,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 93184,
    "buffs": "334131.307185.335161.",
    "hitType": 1,
    "overheal": 435872,
    "sourceID": 8,
    "targetID": 8,
    "timestamp": 1923089,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 148533,
    "buffs": "307185.345230.324748.334131.335161.",
    "hitType": 1,
    "overheal": 417429,
    "sourceID": 2,
    "targetID": 2,
    "timestamp": 1924449,
    "type": "heal",
  },
]
`;

exports[`reduceEventsByPlayer HealEvents targetID === healing received by target 1`] = `
Array [
  Object {
    "abilityGameID": 344422,
    "amount": 128882,
    "buffs": "216251.333089.307185.52127.335161.",
    "hitType": 1,
    "overheal": 474213,
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 1,
    "targetMarker": 2,
    "timestamp": 1913800,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 152110,
    "buffs": "216251.333089.307185.52127.335161.",
    "hitType": 1,
    "overheal": 456290,
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 9,
    "timestamp": 1913816,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 361636,
    "buffs": "216251.333089.307185.52127.335161.",
    "hitType": 1,
    "overheal": 243422,
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 4,
    "targetMarker": 7,
    "timestamp": 1913816,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 142701,
    "buffs": "341449.343594.307185.335161.324748.",
    "hitType": 1,
    "overheal": 436731,
    "sourceID": 9,
    "targetID": 2,
    "timestamp": 1915015,
    "type": "heal",
  },
  Object {
    "abilityGameID": 344422,
    "amount": 137654,
    "buffs": "216251.333089.307185.52127.335161.53390.",
    "hitType": 1,
    "overheal": 400644,
    "sourceID": 1,
    "sourceMarker": 2,
    "targetID": 8,
    "timestamp": 1917790,
    "type": "heal",
  },
]
`;
